--- a/Portfolio/src/data/projects.json
+++ b/Portfolio/src/data/projects.json
@@ -1,10 +1,10 @@
 [
   {
-    "title": "Appointment Form Project",
-    "imageSrc": "projects/project.png",
-    "description": "This is an appointment form project built to demonstrate skills in HTML, CSS, and JavaScript, with validation and responsive design.",
+    "title": "Exclusive-Music-player",
+    "imageSrc": "/projects/Fera.png",
+    "description": "This is an Exclusive-Music-player built to demonstrate skills in HTML, CSS, and JavaScript, with validation and responsive design.",
     "skills": ["HTML", "CSS", "JavaScript"],
-    "demo": "https://www.example.com",
-    "source": "https://github.com/esnoko/Appointment-Form"
+    "demo": "https://esnoko.github.io/HexSoftwares_Exclusive-Music-player/",
+    "source": "https://github.com/esnoko/HexSoftwares_Exclusive-Music-player.git"
   }
 ]
