Updated Exclusive Music player Project

--- a/Portfolio/src/data/projects.json
+++ b/Portfolio/src/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
-    "title": "Exclusive-Music-player",
-    "imageSrc": "/projects/Fera.png",
+    "title": "Exclusive Music player",
+    "imageSrc": "projects/Fera.png",
     "description": "This is an Exclusive-Music-player built to demonstrate skills in HTML, CSS, and JavaScript, with validation and responsive design.",
     "skills": ["HTML", "CSS", "JavaScript"],
     "demo": "https://esnoko.github.io/HexSoftwares_Exclusive-Music-player/",
